WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173123
Crash under -[WKWebView _updateVisibleContentRects]
https://bugs.webkit.org/show_bug.cgi?id=173123
Summary
Crash under -[WKWebView _updateVisibleContentRects]
Simon Fraser (smfr)
Reported
2017-06-08 17:10:02 PDT
Crash under -[WKWebView _updateVisibleContentRects]
Attachments
Patch
(2.41 KB, patch)
2017-06-08 17:11 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-06-08 17:11:14 PDT
Created
attachment 312362
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-06-08 17:11:34 PDT
rdar://problem/32650112
Tim Horton
Comment 3
2017-06-08 17:15:53 PDT
Comment on
attachment 312362
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=312362&action=review
> Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:319 > +- (BOOL)_isValid
Maybe adopt this in _webProcessIdentifier and _killWebProcess? This is definitely better than those, which don't do the nil check.
Simon Fraser (smfr)
Comment 4
2017-06-08 17:47:03 PDT
https://trac.webkit.org/r217956
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug