Crash under -[WKWebView _updateVisibleContentRects] https://bugs.webkit.org/show_bug.cgi?id=173123 rdar://problem/32650112

Reviewed by Tim Horton.

Make sure the WKWebView is valid in places where we dispatch_async or use
a pre-commit handler.

Speculative fix for a rare crasher.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _isValid]):
(-[WKWebView _addUpdateVisibleContentRectPreCommitHandler]):
(-[WKWebView _scheduleVisibleContentRectUpdateAfterScrollInView:]):

Canonical link: https://commits.webkit.org/189980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217956 268f45cc-cd09-0410-ab3c-d52691b4dbfc